--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="row" style="color: white;">
                     <div class="col-3">
                         <h6 style="font-size: 10px;">About the author</h6>
-                        <p class="footerText">Task given by Guvi Zen Class for practice concepts of bootstrap</p>
+                        <p class="footerText">Created as part of task to practice concepts of bootstrap</p>
                     </div>
                     <div class="col-1"></div>
                     <div class="col-2" style="border-left: 1px dotted rgb(255, 255, 255,0.2);">
